--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".OrderPlacedActivity" android:exported="false" />
 
         <activity android:name=".RegisterActivity" android:exported="false" />
+        <activity android:name=".ProductListActivity" android:exported="false" />
 
         <service
             android:name=".MyFirebaseMessagingService"
